asset/Deployment/K8/networkpolicies/tito-sql-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: tito-sql 
  labels:
    version: "1.5"
    app: tito
    name: tito-sql
    tier: backend
spec:
  containers:
    - name: tito-sql
      image: vmeoc/tito-sql:V1.5
      ports:
      - containerPort: 3306
