asset/Deployment/K8/networkpolicies/tito-fe-service.yml
apiVersion: v1
kind: Service
metadata:
  name: titofe-service
  labels:
    app: tito
    stage: dev
spec:
  ports:
  - name: http
    port: 80               # port expose par docker  (pas le port dans le container)
    targetPort: 80
    protocol: TCP
  selector:                     # key/value, label permettant de definir le pod cible (doit etre danslabels du pod)
    name: tito-fe
  type: LoadBalancer
