asset/Deployment/K8/networkpolicies/tito-fe-nsecpolicy-allow-fe-to-db.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-tito
spec:
  podSelector: 
    matchLabels:
      tier: backend
  ingress:
  - from:
    - podSelector:
        matchLabels:
          tier: frontend
