asset/Deployment/K8/networkpolicies/tito-fe-nsecpolicy-allow-fe.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-tito
spec:
  podSelector: 
    matchLabels:
      tier: frontend
  ingress: 
  - {}
